# rsepub

./: Cargo.toml  README.md
epub/: Cargo.toml
epub-reader/: Cargo.toml  README.md  index.html  style.scss
epub-reader-leptos/: Cargo.toml  Trunk.toml
epub-reader-leptos/src/: book.rs  lib.rs  main.rs  resources.rs
epub-reader/src/: book.rs  content.rs  lib.rs  main.rs  resources.rs
epub/examples/: reader.rs
epub/src/: book.rs  chapter.rs  container.rs  content.rs  epubcfi.rs  error.rs  lib.rs  package.rs  reader.rs  writer.rs  xml.rs
epub/src/nav/: mod.rs  navigation.rs  ncx.rs
tools/: Cargo.toml
tools/src/: main.rs
tools/src/commands/: mod.rs  sync_audio.rs
