[package]
name = "epub-reader-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub = { path = "../epub/" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
log = "0.4.20"
wasm-bindgen = "0.2.90"
gloo = { version = "0.11.0", features = ["futures", "file"] }
js-sys = "0.3.67"
web-sys = { version = "0.3.67", features = [
  "HtmlLinkElement",
  "Blob",
  "Url",
  "DomParser",
  "Document",
  "SupportedType",
  "NodeList",
  "HtmlIFrameElement",
  "HtmlAnchorElement",
  "Window",
  "Element",
  "EventTarget",
  "Node",
  "FileList",
  "FileReader",
  "FileReaderSync",
] }
