[package]
name = "epub-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
js-sys = "0.3.66"
log = "0.4.20"
wasm-bindgen = "0.2.89"
wasm-log = "0.3.1"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.66", features = [
  "HtmlLinkElement",
  "Blob",
  "Url",
  "DomParser",
  "Document",
  "SupportedType",
  "NodeList",
  "HtmlIFrameElement",
  "HtmlAnchorElement",
  "Window",
  "Element",
  "EventTarget",
  "Node",
] }

yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
epub = { path = "../epub/" }
flate2 = "1.0.28"
url = "2.5.0"
markup5ever_rcdom = "0.2.0"
xml5ever = "0.17.0"
anyhow = "1.0.80"
